5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_1805.log
== TEST (2019-04-10 18:29:21) 
-- CODE:
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("abscissa do ponto Y(yb)"))

xm= (Xb + Xa)/2
ym= (Yb + Ya)/2

print(round(Xm,1))
print(round(ym,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(Xm,1))
NameError: name 'Xm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:29:41) 
-- CODE:
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("abscissa do ponto Y(yb)"))

xm= (Xb + Xa)/2
ym= (Yb + Ya)/2

print(round(Xm,1))
print(round(ym,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(Xm,1))
NameError: name 'Xm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:30:27) 
-- CODE:
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("abscissa do ponto Y(yb)"))

xm= (Xb + Xa)/2
ym= (Yb + Ya)/2

print(round(Xm ,1))
print(round(ym ,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(Xm ,1))
NameError: name 'Xm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:32:06) 
-- CODE:
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("abscissa do ponto Y(yb)"))

Xm= (Xb + Xa)/2
Ym= (Yb + Ya)/2

print(round(Xm ,1))
print(round(ym ,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(ym ,1))
NameError: name 'ym' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:32:25) 
-- CODE:
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("abscissa do ponto Y(yb)"))

Xm= (Xb + Xa)/2
Ym= (Yb + Ya)/2

print(round(Xm ,1))
print(round(Ym ,1))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:32:37) 
-- CODE:
Xa = float(input("abscissa do ponto A(Xa)"))
Ya = float(input("ordenada do ponto A(Ya)"))
Xb = float(input("abscissa do ponto B(Xb)"))
Yb = float(input("abscissa do ponto Y(yb)"))

Xm= (Xb + Xa)/2
Ym= (Yb + Ya)/2

print(round(Xm ,1))
print(round(Ym ,1))

-- EXECUTION TIME:
0.207931
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
